--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ charset-normalizer==3.4.3
 distlib==0.4.0
 Django==5.2.6
 filelock==3.19.1
+gunicorn==23.0.0
 idna==3.10
 MouseInfo==0.1.3
+packaging==25.0
 pillow==11.2.1
 platformdirs==4.4.0
 PyAutoGUI==0.9.54
